--- a/landing_page1/index.html
+++ b/landing_page1/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!--<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Henrik Johansson</title>
@@ -13,8 +14,8 @@
   <header class="showcase">
     <div class="content">
       <!--Logotype-->
-      <img src="images/logo.svg" alt="Henrik Johansson logo" class="logo">
-      <div class="title">Welcome to the site of Henrik Johansson</div>
+      <img src="images/logo.png" alt="Henrik Johansson logo" class="logo">
+      <div class="title">Welcome to my site</div>
       <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, delectus.</div>
     </div>
   </header>
@@ -41,13 +42,14 @@
         </p>
       </div>
     </div>
+  </div>
   </section>
   <!--About me-->
   <section class="about bg-light">
     <div class="container">
       <div class="grid-2">
         <div class="center">
-          <i class="fas fa-laptop-code fa-10x"></i>
+          <i class="fas fa-laptop-code fa-8x"></i>
         </div>
         <div>
           <h3>About me</h3>
@@ -59,7 +61,7 @@
     </div>
   </section>
   <footer class="center bg-dark">
-    <p>Henrik Johansson &copy 2018</p>
+    <p>Henrik Johansson &copy; 2018</p>
   </footer>
 </body>
 </html>
