--- a/landing_page2/index.html
+++ b/landing_page2/index.html
@@ -24,6 +24,20 @@
 <section class="section-1">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
+<section class="section-3">
+  <div>
+    <h3>Header</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quis obcaecati ab dolorum minima atque quae ipsam quos, sunt unde?</p>
+  </div>
+  <div>
+    <h3>Header</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quis obcaecati ab dolorum minima atque quae ipsam quos, sunt unde?</p>
+  </div>
+  <div>
+    <h3>Header</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quis obcaecati ab dolorum minima atque quae ipsam quos, sunt unde?</p>
+  </div>
+</section>
 
 <footer>
   <p>&copy; Henrik Johansson 2018</p>
