--- a/landing_page1/index.html
+++ b/landing_page1/index.html
@@ -29,7 +29,7 @@
         </p>
       </div>
       <div>
-        <i class="fas fa-chalkboard-teacher fa-3x"></i>
+        <i class="fab fa-facebook fa-3x"></i>
         <h3>Tutorials</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo facilis nam quasi et officiis vero cupiditate natus incidunt! Soluta, labore.
         </p>
