Changed to smaller video file

--- a/vid_landing_page/index.html
+++ b/vid_landing_page/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="vid-header container">
     <div class="fullscreen-v-wrap">
-      <video id="vid" src="video/160606_MontBlanc_Timelapse1_1080p.mov" autoplay="true" loop="true"></video>
+      <video id="vid" src="video/Lake.mp4" autoplay="true" loop="true"></video>
     </div>
     <div class="header-overlay">
       <div class="header-content">
