--- a/basic_html_css_layout_page/index.html
+++ b/basic_html_css_layout_page/index.html
@@ -21,17 +21,17 @@
       </div>
       <nav>
         <ul>
-          <li class="current"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li class="current"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <section id="showcase">
     <div class="overlay">
-    <div class="container">
-        <h1>Affordable and Professional Web Design</h1>
+      <div class="container">
+        <h1>Professional Web Design</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.     Asperiores veritatis doloribus sequi sint recusandae, soluta.</p>
       </div>
     </div>
@@ -41,29 +41,32 @@
       <h1>Subscribe To Our Newsletter</h1>
       <form>
         <input type="email" name="email" placeholder="Enter Email..."/>
-        <button class="btn-1" type"submit">Subscribe</button>
+        <button class="btn-1" type="submit">Subscribe</button>
       </form>
     </div>
   </section>
   <section id="boxes">
     <div class="container">
-    <div class="box">
-      <i class="fab fa-html5 fa-7x"></i>
-      <h3>HTML5</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint harum quo explicabo quisquam, commodi dicta!</p>
-    </div>
-    <div class="box">
-      <i class="fab fa-css3 fa-7x"></i>
-      <h3>CSS 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint harum quo explicabo quisquam, commodi dicta!</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-pencil-alt fa-7x"></i>
-      <h3>Graphic Design</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint harum quo explicabo quisquam, commodi dicta!</p>
-    </div>
+      <div class="box">
+        <i class="fab fa-html5 fa-5x"></i>
+        <h3>HTML5</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint harum quo explicabo quisquam, commodi dicta!</p>
+      </div>
+      <div class="box">
+        <i class="fab fa-css3-alt fa-5x"></i>
+        <h3>CSS 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod temporibus veritatis amet vitae facere vel cupiditate molestiae doloribus dignissimos voluptates perferendis animi assumenda, quia ducimus laboriosam natus aspernatur obcaecati. Architecto.
+        </p>
+      </div>
+      <div class="box">
+        <i class="fas fa-pencil-alt fa-5x"></i>
+        <h3>Graphic Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe repellendus voluptate numquam veniam eligendi eius itaque alias iste, officiis nobis blanditiis ratione, dignissimos vitae hic quia temporibus? Sequi, expedita, ea.
+        </p>
+      </div>
     </div>
   </section>
+
   <footer>
     <div class="container">
       <p>&copy; Henrik Johansson 2019</p>
